Move SourceData init to constructor for KDiff3App

BUG: 486782
FIXED-IN: 1.11.3